--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -5,8 +5,7 @@
 .welcome {
 	height: 100vh;
 	background: url(../../assets/on-load-bg.jpg);
-	background-size: cover;
-	background-position-y: -30px;
+	background-size: 120%;
 	position: relative;
 }
 .welcome-content {
@@ -28,7 +27,7 @@
 	-webkit-box-shadow: inset 0 0 30px #000;
 	box-shadow: inset 0 0 30px #000;
 	text-shadow: 3px 0px 4px #000;
-	font-size: 50px;
+	font-size: 3.1rem;
 	span {
 		display: block;
 	}
@@ -75,11 +74,14 @@
 	background-size: cover;
 }
 .game-play_header {
-	margin: 10px;
+	margin: 0 5px 20px 5px;
 	padding: 20px;
 	color: white;
 	background: $marvel-red;
 	text-shadow: 3px 0px 4px #000;
+	-moz-box-shadow: inset 0 0 30px #000;
+	-webkit-box-shadow: inset 0 0 30px #000;
+	box-shadow: inset 0 0 30px #000;
 	h1 {
 	    margin-bottom: 10px;
 	    span {
@@ -114,13 +116,18 @@
 }
 
 .character-card, .success {
-	width: calc(33.33% - 20px);
-	margin: 10px;
+	width: calc(33.33% - 10px);
+	margin-right: 10px;
 	min-height: 50vh;
 	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	position: relative;
+}
+
+.character-card:nth-of-type(3), .success:nth-of-type(3) {
+	margin-right: 0;
 }
 .guessed-character {
 	text-align: center;
@@ -135,17 +142,23 @@
 
 .guess-container {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: row;
 	padding-top: 20px;
 }
 
 .guess {
-	max-width: 75%;
+	max-width: 100%;
 	padding-bottom: 10px;
 }
 
 .guess-submit {
-	max-width: 25%;
+	padding: 5px;
+	margin: 10px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	// transform: translate(-50%);
 }
 
 .winner, .loser {
@@ -212,5 +225,50 @@
 			text-align: center;
 		}
 	}
+}
+
+@media (max-width: 980px) {
+	.welcome {
+		background-size: 135%;
+		background-position-x: 80%;
+	}
+	.welcome-content h1 {
+		font-size: 2.9rem;
+	}
+}
+
+@media (max-width: 880px) {
+	.game-play_header {
+		background: purple;
+	}
+}
+
+@media (max-width: 768px) {
+	.welcome {
+		background-size: cover;
+	}
+	.welcome-content h1 {
+		font-size: 2.5rem;
+		padding: 30px 15px;
+	}
+	.welcome-content_instructions {
+		padding: 30px;
+		font-size: 0.95rem;
+	}
+}
+
+@media (max-width: 480px) {
+	.welcome {
+		background-size: cover;
+	}
+	.welcome-content h1 {
+		font-size: 1.8rem;
+		padding: 30px 15px;
+	}
+	.welcome-content_instructions {
+		padding: 30px;
+		font-size: 0.8rem;
+	}
+
 }
 
