updating mobile styling

--- a/dev/styles/partials/_global.scss
+++ b/dev/styles/partials/_global.scss
@@ -18,7 +18,7 @@ h1, h2 {
 	margin: 0;
 }
 
-.hide-on-load, .hide-until-won, .hide-until-lost {
+.hide-until-won, .hide-until-lost {
     display: none;
 }
 
