--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -237,11 +237,6 @@
 	}
 }
 
-@media (max-width: 880px) {
-	.game-play_header {
-		background: purple;
-	}
-}
 
 @media (max-width: 768px) {
 	.welcome {
@@ -254,6 +249,20 @@
 	.welcome-content_instructions {
 		padding: 30px;
 		font-size: 0.95rem;
+	}
+
+	.game-play-header {
+		margin: 0px 2.5px 20px 2.5px;
+	}
+
+	.game-play-contnet {
+		padding: 10px;
+	}
+
+	.character-card {
+		width: 100%;
+		margin-right: 0;
+		min-height: auto;
 	}
 }
 
