--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -149,7 +149,7 @@ h1, h2 {
   text-align: center;
   margin: 0; }
 
-.hide-on-load, .hide-until-won, .hide-until-lost {
+.hide-until-won, .hide-until-lost {
   display: none; }
 
 .welcome-content h1, .welcome-content_instructions, .winner, .loser, .character-card, .game-play_header, .success {
@@ -416,10 +416,6 @@ button {
   .welcome-content h1 {
     font-size: 2.9rem; } }
 
-@media (max-width: 880px) {
-  .game-play_header {
-    background: purple; } }
-
 @media (max-width: 768px) {
   .welcome {
     background-size: cover; }
@@ -428,7 +424,15 @@ button {
     padding: 30px 15px; }
   .welcome-content_instructions {
     padding: 30px;
-    font-size: 0.95rem; } }
+    font-size: 0.95rem; }
+  .game-play-header {
+    margin: 0px 2.5px 20px 2.5px; }
+  .game-play-contnet {
+    padding: 10px; }
+  .character-card {
+    width: 100%;
+    margin-right: 0;
+    min-height: auto; } }
 
 @media (max-width: 480px) {
   .welcome {
